--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "body-parser": "^1.14.1",
     "consign": "^0.1.2",
     "express": "^4.13.3",
+    "jsonwebtoken": "^5.4.1",
+    "md5": "^2.2.1",
     "mongoose": "^4.3.1",
     "nodemon": "^1.18.3"
   }
